feat: add more evaluation
